test/spec_vectors/i32/fail/module_18.wat
(module (memory 1) (func $type-unary-operand-empty-in-store (i32.store (i32.eqz) (i32.const 1))))